--- a/Survey Review/survey.qmd
+++ b/Survey Review/survey.qmd
@@ -46,12 +46,34 @@ cor_df <- as.data.frame(cor_totalscore) %>%
   arrange(`Correlation with Totalscore`) %>%
   mutate(Question = factor(Question, levels = Question))  # enforce ordering
 
+cor_df
+
 ggplot(cor_df, aes(x = `Correlation with Totalscore`, y = Question)) +
   geom_col(fill = "steelblue") +
   xlim(0, 1) +
   theme_minimal() +
   labs(title = "Correlations with Totalscore", x = "Correlation", y = "Question")
 ```
+
+## Remove the items with cor <= 4
+
+```{r}
+attach(stemq2)
+totalscore <- (q1+q2+q3+q4+q5+q6+q7+q8+q9+q10+q11+q12+q13+q14+q15+q16+q17+q18+q19+q20+q21+q22+q23+q24)
+# Create a new dataframe with only the filtered questions and the total score
+newdata_filtered <- data.frame(q2, q4, q5, q6, q8, q9, q10, q11, q13, q15, 
+                               q16, q17, q19, q20, q22, q23, q24, totalscore)
+detach(stemq2)
+
+filtered_q <- newdata_filtered %>% select(q2, q4, q5, q6, q8, q9, q10, q11, q13, q15, 
+                               q16, q17, q19, q20, q22, q23, q24)
+
+psych::alpha(filtered_q)
+
+psych::alpha(filtered_q, check.keys = TRUE)$total$raw_alpha
+```
+
+ 
  
 ## Running parallel analysis
 
@@ -81,9 +103,10 @@ fa(stemq2,nfactors = 2,rotate="oblimin")
 
 ## Command for creation of diagram underlying extracted factors 
 
-```{r}
+```{r, fig.width=10}
 M1<-fa(stemq2,nfactors = 2,rotate="oblimin")
 fa.diagram(M1,main="stemq2")
+summary(M1)
 ```
 
 
