--- a/Anderson/cry.qmd
+++ b/Anderson/cry.qmd
@@ -15,7 +15,7 @@ full_data_odd <- read_csv("./Data/filtered_full_data_odd.csv")
 demographics <- read_csv("./Data/demographics_students.csv")
 ```
 
-# EDA and cleaning:
+# cleaning:
 
 Find the groups of demographics dataset:
 
@@ -46,5 +46,10 @@ full_data_odd %>%
 demographics %>%
   group_by(Reason) %>%
   summarise(count = n())
+```
+
+Join the two datasets:
+```{r}
+
 ```
 
