--- a/Anderson/gmm_full_without_nas.Rmd
+++ b/Anderson/gmm_full_without_nas.Rmd
@@ -51,13 +51,13 @@ ggplot(pca_data, aes(x = PC1, y = PC2, color = cluster)) +
 ```
 
 ```{r}
-# Visualize variable contributions to the principal components (messy... probably won't use)
-fviz_pca_var(pca_res,
-             col.var = "contrib", # Color by contributions to the PC
-             gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
-             repel = TRUE # Avoids text overlapping
-) +
-  labs(title = "Variable Contribution to Principal Components")
+# # Visualize variable contributions to the principal components (messy... probably won't use)
+# fviz_pca_var(pca_res,
+#              col.var = "contrib", # Color by contributions to the PC
+#              gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
+#              repel = TRUE # Avoids text overlapping
+# ) +
+#   labs(title = "Variable Contribution to Principal Components")
 
 ```
 
